vts/field-kit/local-mirror/smadp-mesh/k8s/ops-center/k8s/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: ops-center-stripprefix
  namespace: ops-center
  labels:
    app.kubernetes.io/name: ops-center
    app.kubernetes.io/part-of: smadp
spec:
  stripPrefix:
    prefixes:
      - /ops
